# Pioneers_App

./: README.md  pyproject.toml
.github/workflows/: ci.yml
pioneers_app/: hooks.py  modules.txt  patches.txt
pioneers_app/patches/: _2024_4_20_create_pioneers_workspace.py
pioneers_app/pioneers_app/dashboard_chart/student_count/: student_count.json
pioneers_app/pioneers_app/doctype/accommodation/: accommodation.js  accommodation.json  accommodation.py  test_accommodation.py
pioneers_app/pioneers_app/doctype/employees/: employees.js  employees.json  employees.py  test_employees.py
pioneers_app/pioneers_app/doctype/majors/: majors.js  majors.json  majors.py  test_majors.py
pioneers_app/pioneers_app/doctype/parents/: parents.js  parents.json  parents.py  test_parents.py
pioneers_app/pioneers_app/doctype/payment/: payment.js  payment.json  payment.py  test_payment.py
pioneers_app/pioneers_app/doctype/pioneer_payment/: pioneer_payment.js  pioneer_payment.json  pioneer_payment.py  test_pioneer_payment.py
pioneers_app/pioneers_app/doctype/students/: students.js  students.json  students.py  test_students.py
pioneers_app/pioneers_app/doctype/universities/: test_universities.py  universities.js  universities.json  universities.py
pioneers_app/pioneers_app/pioneers_app_dashboard/students_dashboard/: students_dashboard.json
